recursion.logo.tree.Tree.scala.error
Compilation error:
Tree:4: error: reassignment to val
            length=length*shrink
                  ^Tree:5: error: reassignment to val
            steps=steps-1}
                 ^